# streaming-upload-test

./: .gitignore  Makefile  docker-compose.yaml  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
api/: .dockerignore  Dockerfile  Makefile  pyproject.toml
api/app/: main.py
api/scripts/: sample_json.py
api/src/: main.py  validator.py
api/tests/: test_main.py  test_validator.py
proxy/conf.d/: default.conf
scripts/: Makefile  pyproject.toml  sample_json.py
spa/: Dockerfile  package.json  tsconfig.json  webpack.config.ts
spa/src/: App.tsx  entrypoint.ts  index.html
