[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["kamiazya <yuki@kamiazya.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
orjson = "^3.6.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.8b0"
isort = "^5.9.3"
pytest = "^6.2.5"
pyproject-flake8 = "^0.0.1-alpha.2"
requests = "^2.26.0"
orjson = "^3.6.3"
pytest-asyncio = "^0.15.1"
Faker = "^8.14.0"

[tool.black]
line-length = 100
max-complexity = 10

[tool.mypy]
files = "app/**/*.py"

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true

[tool.flake8]
max-line-length = 100
max-complexity = 10

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
